--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,8 @@ authors = [{name = "Ognjen Bostjancic"}]
 dependencies = [
     "click>=8.0.0",
     "litellm>=1.30.7",
+    "python-dotenv>=1.0.0",
+    "sentry-sdk>=1.40.0",
 ]
 
 [project.optional-dependencies]
